NetBSD Problem Report #40940

From kardel@pip.acrys.com  Sun Mar  1 20:34:20 2009
Return-Path: <kardel@pip.acrys.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 686E663C1DC
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  1 Mar 2009 20:34:20 +0000 (UTC)
Message-Id: <200903011930.n21JUDmA001449@pip.acrys.com>
Date: Sun, 1 Mar 2009 20:30:13 +0100 (MET)
From: kardel@pip.acrys.com
Reply-To: kardel@pip.acrys.com
To: gnats-bugs@gnats.NetBSD.org
Subject: panic: KASSERT(solocked(sb-sb_so) in key_receive
X-Send-Pr-Version: 3.95

>Number:         40940
>Category:       kern
>Synopsis:       panic: KASSERT(solocked(sb-sb_so) in key_receive
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 01 20:35:00 +0000 2009
>Closed-Date:    Sat Aug 22 10:40:53 +0000 2009
>Last-Modified:  Sun Nov 15 06:05:01 +0000 2009
>Originator:     Frank Kardel
>Release:        NetBSD 5.99.7 - 090228
>Organization:

>Environment:
System: NetBSD pip.kardel.name 5.99.7 NetBSD 5.99.7 (PIP) #24: Sat Feb 28 07:44:10 MET 2009 kardel@pip.kardel.name:/fs/raid1a/src/NetBSD/tc-merge/src/obj.i386/sys/arch/i386/compile/PIP i386
Architecture: i386
Machine: i386
>Description:
	system panics with diagnostic assertion solocked in key_receive in function sbspace.
	racoon is running. MP system.
	Stack trace (hand copied as BIOS clears RAM and dump via ahcisata doesn't work here)
	key_receive
	do_sys_recvmsg
	sys_recvfrom
	syscall

>How-To-Repeat:
	MP system(Q9450), racoon + polices, netio matching policies ... wait ... panic
>Fix:
	disable racoon+ipsec

>Release-Note:

>Audit-Trail:
From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40940: panic: KASSERT(solocked(sb-sb_so) in key_receive
Date: Mon, 2 Mar 2009 19:35:41 +0000

 On Sun, Mar 01, 2009 at 08:35:00PM +0000, kardel@pip.acrys.com wrote:

 > 	key_receive
 > 	do_sys_recvmsg
 > 	sys_recvfrom
 > 	syscall

 These changes in key_receive should fix it:

 - Replace splsoftnet with:

 	mutex_enter(softnet_lock);
 	KERNEL_LOCK(1, NULL);

 - Replace splx with:

 	KERNEL_UNLOCK_ONE(NULL);
 	mutex_exit(softnet_lock);

From: Michael van Elst <mlelstv@serpens.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/40940: panic: KASSERT(solocked(sb-sb_so) in key_receive
Date: Sun, 26 Apr 2009 17:44:58 +0200

 Hi,

 the same happened on:

 NetBSD pepew 5.0 NetBSD 5.0 (PEPEW) #1: Sun Apr 26 14:01:35 CEST 2009 mlelstv@henery:/home/netbsd5/obj.i386/home/netbsd5/src/sys/arch/i386/compile/PEPEW i386

 Greetings,
 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

From: Michael van Elst <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40940 CVS commit: src/sys/netkey
Date: Sat, 9 May 2009 11:36:17 +0000

 Module Name:	src
 Committed By:	mlelstv
 Date:		Sat May  9 11:36:17 UTC 2009

 Modified Files:
 	src/sys/netkey: keysock.c

 Log Message:
 Replace splsoftnet() with proper mutexes as suggested by ad@.
 Fixes PR kren/40940.


 To generate a diff of this commit:
 cvs rdiff -u -r1.52 -r1.53 src/sys/netkey/keysock.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kardel@NetBSD.org
State-Changed-When: Sat, 22 Aug 2009 10:40:53 +0000
State-Changed-Why:
fixed with locking fix commitn on May 9th


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40940 CVS commit: [netbsd-5] src/sys/netkey
Date: Sun, 15 Nov 2009 06:01:49 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Nov 15 06:01:49 UTC 2009

 Modified Files:
 	src/sys/netkey [netbsd-5]: keysock.c

 Log Message:
 Pull up following revision(s) (requested by mlelstv in ticket #1142):
 	sys/netkey/keysock.c: revision 1.53
 Replace splsoftnet() with proper mutexes as suggested by ad@.
 Fixes PR kren/40940.


 To generate a diff of this commit:
 cvs rdiff -u -r1.48 -r1.48.10.1 src/sys/netkey/keysock.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.