Replace splsoftnet() with proper mutexes as suggested by ad@. Fixes PR kren/40940.